# notifire

./: .gitmodules  CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
